exp1/parser.output
Terminals unused in grammar

   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   ARRAY_LIST
   ARRAY_ID
   FUNC_CALL
   ARGS
   FOR_DEC
   STRUCT_DEF
   STRUCT_NAME
   ACCESS_MEMBER


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE
    8          | StructSpecifier

    9 StructSpecifier: STRUCT OptTag LC DefList RC
   10                | STRUCT Tag

   11 OptTag: %empty
   12       | ID

   13 Tag: ID

   14 Arraylist: LB INT RB
   15          | LB INT RB Arraylist

   16 ExtDecList: VarDec
   17           | VarDec COMMA ExtDecList

   18 VarDec: ID
   19       | ID Arraylist
   20       | ID Arraylist ASSIGNOP Exp
   21       | ID ASSIGNOP Exp

   22 FuncDec: ID LP VarList RP
   23        | ID LP RP

   24 VarList: ParamDec
   25        | ParamDec COMMA VarList

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmList RC

   28 StmList: %empty
   29        | Stmt StmList

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | FOR LP ForDec RP Stmt
   37     | CONTINUE SEMI
   38     | BREAK SEMI

   39 ForDec: Exp SEMI Exp SEMI Exp
   40       | SEMI Exp SEMI

   41 DefList: %empty
   42        | Def DefList
   43        | error SEMI

   44 Def: Specifier DecList SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp PLUS_ASSIGN_OP Exp
   50    | Exp MINUS_ASSIGN_OP Exp
   51    | Exp MULT_ASSIGN_OP Exp
   52    | Exp DIV_ASSIGN_OP Exp
   53    | Exp MOD_ASSIGN_OP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | Exp MOD Exp
   62    | Exp AUTOPLUS
   63    | Exp AUTOMINUS
   64    | AUTOPLUS Exp
   65    | AUTOMINUS Exp
   66    | LP Exp RP
   67    | MINUS Exp
   68    | NOT Exp
   69    | DPLUS Exp
   70    | Exp DPLUS
   71    | ID LP Args RP
   72    | ID LP RP
   73    | ID
   74    | INT
   75    | FLOAT
   76    | CHAR
   77    | STRING
   78    | ID Arraylist
   79    | LB Args RB
   80    | Exp DOT ID

   81 Args: Exp COMMA Args
   82     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 43
INT (258) 14 15 74
ID (259) 12 13 18 19 20 21 22 23 71 72 73 78 80
RELOP (260) 56
TYPE (261) 7
FLOAT (262) 75
CHAR (263) 76
STRING (264) 77
STRUCT (265) 9 10
DPLUS (266) 69 70
LP (267) 22 23 33 34 35 36 66 71 72
RP (268) 22 23 33 34 35 36 66 71 72
LC (269) 9 27
RC (270) 9 27
LB (271) 14 15 79
RB (272) 14 15 79
SEMI (273) 4 6 30 32 37 38 39 40 43 44
COMMA (274) 17 25 46 81
DOT (275) 80
PLUS (276) 57
MINUS (277) 58 67
STAR (278) 59
DIV (279) 60
MOD (280) 61
ASSIGNOP (281) 20 21 48
PLUS_ASSIGN_OP (282) 49
MINUS_ASSIGN_OP (283) 50
MULT_ASSIGN_OP (284) 51
DIV_ASSIGN_OP (285) 52
MOD_ASSIGN_OP (286) 53
AND (287) 54
OR (288) 55
NOT (289) 68
AUTOPLUS (290) 62 64
AUTOMINUS (291) 63 65
IF (292) 33 34
ELSE (293) 34
WHILE (294) 35
RETURN (295) 32
FOR (296) 36
CONTINUE (297) 37
BREAK (298) 38
EXT_DEF_LIST (299)
EXT_VAR_DEF (300)
FUNC_DEF (301)
FUNC_DEC (302)
EXT_DEC_LIST (303)
PARAM_LIST (304)
PARAM_DEC (305)
VAR_DEF (306)
DEC_LIST (307)
DEF_LIST (308)
COMP_STM (309)
STM_LIST (310)
EXP_STMT (311)
IF_THEN (312)
IF_THEN_ELSE (313)
ARRAY_LIST (314)
ARRAY_ID (315)
FUNC_CALL (316)
ARGS (317)
FOR_DEC (318)
STRUCT_DEF (319)
STRUCT_NAME (320)
ACCESS_MEMBER (321)
UMINUS (322)
LOWER_THEN_ELSE (323)


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
program (70)
    on left: 1, on right: 0
ExtDefList (71)
    on left: 2 3, on right: 1 3
ExtDef (72)
    on left: 4 5 6, on right: 3
Specifier (73)
    on left: 7 8, on right: 4 5 26 44
StructSpecifier (74)
    on left: 9 10, on right: 8
OptTag (75)
    on left: 11 12, on right: 9
Tag (76)
    on left: 13, on right: 10
Arraylist (77)
    on left: 14 15, on right: 15 19 20 78
ExtDecList (78)
    on left: 16 17, on right: 4 17
VarDec (79)
    on left: 18 19 20 21, on right: 16 17 26 47
FuncDec (80)
    on left: 22 23, on right: 5
VarList (81)
    on left: 24 25, on right: 22 25
ParamDec (82)
    on left: 26, on right: 24 25
CompSt (83)
    on left: 27, on right: 5 31
StmList (84)
    on left: 28 29, on right: 27 29
Stmt (85)
    on left: 30 31 32 33 34 35 36 37 38, on right: 29 33 34 35 36
ForDec (86)
    on left: 39 40, on right: 36
DefList (87)
    on left: 41 42 43, on right: 9 27 42
Def (88)
    on left: 44, on right: 42
DecList (89)
    on left: 45 46, on right: 44 46
Dec (90)
    on left: 47, on right: 45 46
Exp (91)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79 80, on right: 20 21 30
    32 33 34 35 39 40 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 80 81 82
Args (92)
    on left: 81 82, on right: 71 79 81


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 3

    9 StructSpecifier: STRUCT . OptTag LC DefList RC
   10                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 11 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: program . $end

    $end  shift, and go to state 13


State 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FuncDec     go to state 18


State 8

    8 Specifier: StructSpecifier .

    $default  reduce using rule 8 (Specifier)


State 9

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 10

   12 OptTag: ID .
   13 Tag: ID .

    ID        reduce using rule 13 (Tag)
    $default  reduce using rule 12 (OptTag)


State 11

    9 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 12

   10 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 10 (StructSpecifier)


State 13

    0 $accept: program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   18 VarDec: ID .
   19       | ID . Arraylist
   20       | ID . Arraylist ASSIGNOP Exp
   21       | ID . ASSIGNOP Exp
   22 FuncDec: ID . LP VarList RP
   23        | ID . LP RP

    LP        shift, and go to state 20
    LB        shift, and go to state 21
    ASSIGNOP  shift, and go to state 22

    $default  reduce using rule 18 (VarDec)

    Arraylist  go to state 23


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 17

   16 ExtDecList: VarDec .
   17           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 25

    $default  reduce using rule 16 (ExtDecList)


State 18

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 19

    9 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 20

   22 FuncDec: ID LP . VarList RP
   23        | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 21

   14 Arraylist: LB . INT RB
   15          | LB . INT RB Arraylist

    INT  shift, and go to state 36


State 22

   21 VarDec: ID ASSIGNOP . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 49


State 23

   19 VarDec: ID Arraylist .
   20       | ID Arraylist . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 50

    $default  reduce using rule 19 (VarDec)


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   17 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 51

    ExtDecList  go to state 52
    VarDec      go to state 17


State 26

   27 CompSt: LC . DefList StmList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT        reduce using rule 41 (DefList)
    ID         reduce using rule 41 (DefList)
    FLOAT      reduce using rule 41 (DefList)
    CHAR       reduce using rule 41 (DefList)
    STRING     reduce using rule 41 (DefList)
    DPLUS      reduce using rule 41 (DefList)
    LP         reduce using rule 41 (DefList)
    LC         reduce using rule 41 (DefList)
    RC         reduce using rule 41 (DefList)
    LB         reduce using rule 41 (DefList)
    MINUS      reduce using rule 41 (DefList)
    NOT        reduce using rule 41 (DefList)
    AUTOPLUS   reduce using rule 41 (DefList)
    AUTOMINUS  reduce using rule 41 (DefList)
    IF         reduce using rule 41 (DefList)
    WHILE      reduce using rule 41 (DefList)
    RETURN     reduce using rule 41 (DefList)
    FOR        reduce using rule 41 (DefList)
    CONTINUE   reduce using rule 41 (DefList)
    BREAK      reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 31


State 27

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 28

   43 DefList: error . SEMI

    SEMI  shift, and go to state 54


State 29

   44 Def: Specifier . DecList SEMI

    ID  shift, and go to state 51

    VarDec   go to state 55
    DecList  go to state 56
    Dec      go to state 57


State 30

    9 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 58


State 31

   42 DefList: Def . DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT        reduce using rule 41 (DefList)
    ID         reduce using rule 41 (DefList)
    FLOAT      reduce using rule 41 (DefList)
    CHAR       reduce using rule 41 (DefList)
    STRING     reduce using rule 41 (DefList)
    DPLUS      reduce using rule 41 (DefList)
    LP         reduce using rule 41 (DefList)
    LC         reduce using rule 41 (DefList)
    RC         reduce using rule 41 (DefList)
    LB         reduce using rule 41 (DefList)
    MINUS      reduce using rule 41 (DefList)
    NOT        reduce using rule 41 (DefList)
    AUTOPLUS   reduce using rule 41 (DefList)
    AUTOMINUS  reduce using rule 41 (DefList)
    IF         reduce using rule 41 (DefList)
    WHILE      reduce using rule 41 (DefList)
    RETURN     reduce using rule 41 (DefList)
    FOR        reduce using rule 41 (DefList)
    CONTINUE   reduce using rule 41 (DefList)
    BREAK      reduce using rule 41 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 59
    Def              go to state 31


State 32

   23 FuncDec: ID LP RP .

    $default  reduce using rule 23 (FuncDec)


State 33

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 51

    VarDec  go to state 60


State 34

   22 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 61


State 35

   24 VarList: ParamDec .
   25        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 62

    $default  reduce using rule 24 (VarList)


State 36

   14 Arraylist: LB INT . RB
   15          | LB INT . RB Arraylist

    RB  shift, and go to state 63


State 37

   74 Exp: INT .

    $default  reduce using rule 74 (Exp)


State 38

   71 Exp: ID . LP Args RP
   72    | ID . LP RP
   73    | ID .
   78    | ID . Arraylist

    LP  shift, and go to state 64
    LB  shift, and go to state 21

    $default  reduce using rule 73 (Exp)

    Arraylist  go to state 65


State 39

   75 Exp: FLOAT .

    $default  reduce using rule 75 (Exp)


State 40

   76 Exp: CHAR .

    $default  reduce using rule 76 (Exp)


State 41

   77 Exp: STRING .

    $default  reduce using rule 77 (Exp)


State 42

   69 Exp: DPLUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 66


State 43

   66 Exp: LP . Exp RP

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 67


State 44

   79 Exp: LB . Args RB

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp   go to state 68
    Args  go to state 69


State 45

   67 Exp: MINUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 70


State 46

   68 Exp: NOT . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 71


State 47

   64 Exp: AUTOPLUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 72


State 48

   65 Exp: AUTOMINUS . Exp

    INT        shift, and go to state 37
    ID         shift, and go to state 38
    FLOAT      shift, and go to state 39
    CHAR       shift, and go to state 40
    STRING     shift, and go to state 41
    DPLUS      shift, and go to state 42
    LP         shift, and go to state 43
    LB         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    AUTOPLUS   shift, and go to state 47
    AUTOMINUS  shift, and go to state 48

    Exp  go to state 73


State 49

   21 VarDec: ID ASSIGNOP Exp .
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . PLUS_ASSIGN_OP Exp
   50    | Exp . MINUS_ASSIGN_OP Exp
   51    | Exp . MULT_ASSIGN_OP Exp
   52    | Exp . DIV_ASSIGN_OP Exp
   53    | Exp . MOD_ASSIGN_OP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   61    | Exp . MOD Exp
   62    | Exp . AUTOPLUS
   63    | Exp . AUTOMINUS
   70    | Exp . DPLUS
   80    | Exp . DOT ID
